Commit Finally Code

--- a/sqgxy-xxydz-news-frontend/public/index.html
+++ b/sqgxy-xxydz-news-frontend/public/index.html
@@ -14,6 +14,9 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script type="text/javascript" src="https://webapi.amap.com/maps?v=2.0&key=1d2347b6b87f84ac96545b265e007edf"></script>
+  <script type="text/javascript" src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=9qTR8CqxVhGhRlGuaWyGYt2XdZk5IlvR"></script>
+  <script src="https://map.qq.com/api/gljs?v=1.exp&key=ZGFBZ-YZ6CJ-XMFFU-KDHQE-NKEQ3-CIF5S"></script>
   <style>
     * {
       padding: 0;
